# Qt_Music_Player

./: README.md
QtMusicPlayer/: CMakeLists.txt  kmainwindow.cpp  kmainwindow.h  kmainwindow.qrc  kmainwindow.ui  kmusicinf.cpp  kmusicinf.h  kxmusichttp.cpp  kxmusichttp.h  kxmusicsearch.cpp  kxmusicsearch.h  ui_kmainwindow.h
